# scalable-llama

./: .gitignore  Gemini.md  README.md  analyze_specific_run.py  evaluate_verifier_prompt.py  ifeval_plan.md  inference.py  inspect_dataset.py  inspect_results.py  lambda_setup_guide.md  merge_lora.py  opencode.json  print_dataset_rules.py  print_results_summary.py  problem_ideas.md  pyproject.toml  sprint-config.toml  vllm_client.py  vllm_server.sh
.cursor/: mcp.json
.factory/: mcp.json
configs/rl/: curriculum_sprint.toml  curriculum_sprint_diff0.5_cat_noverifier.toml  curriculum_sprint_diff0.5_cat_twofold.toml  curriculum_sprint_diff0.5_lcg_noverifier.toml  curriculum_sprint_diff0.5_lcg_twofold.toml  curriculum_sprint_diff0.5_noverifier.toml  curriculum_sprint_diff0.5_simplecat_noverifier.toml  curriculum_sprint_diff0.5_simplecat_twofold.toml  curriculum_sprint_diff0.5_twofold.toml  curriculum_sprint_diff0_long.toml  curriculum_sprint_diff1.toml  curriculum_sprint_diff1_long.toml  curriculum_sprint_harder_from_diff0.toml  curriculum_sprint_ifeval_stage1_noverifier.toml  curriculum_sprint_ifeval_stage1_twofold.toml  curriculum_sprint_no_verifier_diff0.toml  curriculum_sprint_no_verifier_diff1.toml  curriculum_sprint_no_verifier_diff1_from_diff0.toml  ifeval-stage1-noverifier-replication.toml  ifeval-stage1-twofold-replication.toml  ifeval_stage1_optimized_twofold.toml  llama.toml  (+2 more)
environments/curriculum_oversight/: README.md  curriculum_oversight.py  pyproject.toml
environments/format_proxy_hack/: README.md  format_proxy_hack.py  pyproject.toml
(+13 files in other folders)
