[project]
name = "curriculum-oversight"
description = "Modular curriculum learning environment with steganographic coloring and LCG constraints to study reward hacking under twofold verification."
tags = ["reward-hacking", "curriculum", "steganography", "lcg", "sprint", "commit-5883666"]
version = "0.1.12"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["curriculum_oversight.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 10
rollouts_per_example = 1
